--- a/promod-react/app/package.json
+++ b/promod-react/app/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
-    "@mui/styles": "^5.10.6",
+    "@mui/system": "^5.12.0",
     "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
