--- a/promod-react/app/package.json
+++ b/promod-react/app/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bpmn-js": "^9.4.1",
     "moment": "^2.29.4",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bpmn": "^0.2.0",
