--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
         image: mysql
         container_name: promod-mysql
         environment:
-            - MYSQL_USER=spring
-            - MYSQL_PASSWORD=spring
+            - MYSQL_USER=${DB_USER}
+            - MYSQL_PASSWORD=${DB_PASSWORD}
             - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-            - MYSQL_DATABASE=promod
+            - MYSQL_DATABASE=${DB_NAME}
         volumes:
             - ./promod-mysql/:/docker-entrypoint-initdb.d/:ro
         healthcheck:
@@ -15,6 +15,9 @@ services:
             interval: 10s
             timeout: 2s
             retries: 10
+        ports:
+            - ${DB_EXPOSE_PORT}:3306
+            
 
     promod-spring:
         build: ./promod-spring
@@ -23,11 +26,12 @@ services:
             promod-mysql:
                condition: service_healthy
         environment:
-            - SPRING_DATASOURCE_URL=jdbc:mysql://promod-mysql:3306/promod?allowPublicKeyRetrieval=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=Europe/Prague
-            - SPRING_DATASOURCE_USERNAME=spring
-            - SPRING_DATASOURCE_PASSWORD=spring
+            - SPRING_DATASOURCE_URL=jdbc:mysql://promod-mysql:3306/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=Europe/Prague
+            - SPRING_DATASOURCE_USERNAME=${DB_USER}
+            - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
+            - PROMOD_CORS_ALLOWED-ORIGINS=http://localhost:${WEB_APP_EXPOSE_PORT}/
         ports:
-            - 8080:8080
+            - ${SPRING_EXPOSE_PORT}:8080
             
     promod-react:
         build: ./promod-react
@@ -36,6 +40,6 @@ services:
             - promod-spring
         environment:
             serverURL:
-                http://localhost:8080/
+                http://localhost:${SPRING_EXPOSE_PORT}/
         ports:
-            - 3000:80
+            - ${WEB_APP_EXPOSE_PORT}:80
