--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DB_USER=spring
 DB_PASSWORD=spring
 DB_EXPOSE_PORT=3307
-SPRING_EXPOSE_PORT=8080
-WEB_APP_EXPOSE_PORT=3000
+DB_DATA_FOLDER=./promod-mysql/data
+SPRING_EXPOSE_PORT=8081
+WEB_APP_EXPOSE_PORT=3001
