script with data added TODO-changeWebApp

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DB_USER=spring
 DB_PASSWORD=spring
-DB_EXPOSE_PORT=3307
+DB_EXPOSE_PORT=3301
+SQL_FILE=create-with-data.sql
 DB_DATA_FOLDER=./promod-mysql/data
 SPRING_EXPOSE_PORT=8081
 WEB_APP_EXPOSE_PORT=3001
